<resources>
    <string name="app_name">MySQLite</string>
    <string name="action_settings">Settings</string>

    <string name="BotonAceptar">Agregar</string>
    <string name="Usuario">Usuario</string>
    <string name="Email">Email</string>
    <string name="Twitter">Twitter</string>
    <string name="Tel">Tel</string>
    <string name="Fecha_Nacimiento">Fecha Naciento</string>
    <string name="BotonGuardar">Guardar</string>
</resources>
